Update or remove broken links

--- a/index.html
+++ b/index.html
@@ -300,7 +300,6 @@
     </div>
   </div>
 
-
 <br>
  
 
@@ -389,15 +388,16 @@
       </div>
     </div>
 
-    <div class="w3-third w3-container w3-margin-bottom filterDiv">
-      <a href='http://watershedtool.org/' target='_blank'><img src="images/wstool.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
+    <div class="w3-third w3-container w3-margin-bottom filterDiv natcaps webmaps">
+      <a href='http://viz.naturalcapitalproject.stanford.edu/gobiTraining' target='_blank'><img src="images/gobi.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b>Watershed Conservation Screening Tool</b></p>
-        <p>This simple tool will quickly measure the potential for five common watershed conservation activities to reduce sediment and nutrient pollution in a source watershed.
+        <p><b>Gobi Training Viewer</b></p>
+        <p>Bringing Natural Capital Knowledge to Mongolia’s Gobi Steppe
+This four-day virtual event will introduce participants to the Natural Capital Approach and give teams of participants hands-on experience with three ecosystem services models. 
+        <span class="light"> By NatCap </span>
         </p>
       </div>
     </div>
-  </div>
 
 
   <!-- 9th Examples Row -->
@@ -455,13 +455,13 @@
       </div>
     </div>
 
-    <div class="w3-third w3-container w3-margin-bottom filterDiv webmaps">
-      <a href='https://marinecadastre.gov/oceanreports/@-10737743.881037742,4753280.983019757/4' target='_blank'><img src="images/oceansReport.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
+  <div class="w3-third w3-container">
+      <a href='https://ecoparis.github.io/' target='_blank'><img src="images/ecoparis.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b>Ocean Report</b></p>
-        <p>Draw a custom area anywhere in U.S. waters or pick from a predefined list of locations to get instant custom reports. Reports include descriptive infographics and supporting data that can be used for offshore planning, permitting, environmental review, public relations, and more. New features allow printing by industry, sharing, and adding custom coordinates.
-        <span class="light"> By A BOEM/NOAA PARTNERSHIP</span>
-      </p>
+        <p><b>EcoParis: Ecosystem Services in Paris</b></p>
+        <p>EcoParis is an interactive visualization of map data of ecosystem services in urban and peri-urban areas in the Ile-de-France region from the IDEFESE project.
+        <span class="light"> By A. Ferragni, K. Sinnathamby, R. Liautaud </span>
+        </p>
       </div>
     </div>
   </div>
@@ -480,7 +480,7 @@
     </div>
 
     <div class="w3-third w3-container w3-margin-bottom filterDiv natcaps webmaps">
-      <a href='https://app.beescape.org/' target='_blank'><img src="images/beescape.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
+      <a href='https://beescape.psu.edu/app/' target='_blank'><img src="images/beescape.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Beescape</b></p>
         <p>Get a bee's eye view of your landscape - This tool will help you understand how the landscape surrounding managed honey bee hives placed in an apiary, garden, or farm stacks up in terms of floral resources bees can find, the insecticides they encounter, and for wild bees, the nesting sites that are available. 
@@ -488,21 +488,7 @@
         </p>
       </div>
     </div>
-
-    <div class="w3-third w3-container filterDiv webmaps">
-      <a href='http://www.pollinationmapper.org/app-pollinationmapper/' target='_blank'><img src="images/poll.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p><b>Pollination Mapper (Beta)</b></p>
-        <p>This interactive decision support tool to help inform grower’s choice of pollination strategies for their specialty crop farms in the US. It allows you to select your farm, try different approaches to pollination, compare and save the results. Set up a user profile to return to your session in the future and try new strategies. 
-        <span class="light"> By the Integrated Crop Pollination Project. Work led by Eric Lonsdorf, Taylor Ricketts, with software developers at Azavea.  </span>
-        </p>
-      </div>
-    </div>
-  </div>
-
-<!-- 12th Examples Row -->
-<div class="w3-row-padding">
-
+  
     <div class="w3-third w3-container w3-margin-bottom">
       <img src="images/boo.png" alt="Image" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
@@ -512,28 +498,9 @@
         </p>
       </div>
     </div>
-
-    <div class="w3-third w3-container">
-      <a href='https://ecoparis.github.io/' target='_blank'><img src="images/ecoparis.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p><b>EcoParis: Ecosystem Services in Paris</b></p>
-        <p>EcoParis is an interactive visualization of map data of ecosystem services in urban and peri-urban areas in the Ile-de-France region from the IDEFESE project.
-        <span class="light"> By A. Ferragni, K. Sinnathamby, R. Liautaud </span>
-        </p>
-      </div>
-    </div>
-
-    <div class="w3-third w3-container w3-margin-bottom filterDiv natcaps webmaps">
-      <a href='http://viz.naturalcapitalproject.stanford.edu/gobiTraining' target='_blank'><img src="images/gobi.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p><b>Gobi Training Viewer</b></p>
-        <p>Bringing Natural Capital Knowledge to Mongolia’s Gobi Steppe
-This four-day virtual event will introduce participants to the Natural Capital Approach and give teams of participants hands-on experience with three ecosystem services models. 
-        <span class="light"> By NatCap </span>
-        </p>
-      </div>
-    </div>
   </div>
+
+<!-- 12th Examples Row -->
 
 <!--
 MORE
